[package]
name = "my-redis"
version = "0.1.0"
authors = ["Morgana <xly_tk@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
mini-redis = "0.2"
bytes = "0.5"
rand = "0.7"
crossbeam = "0.7"
futures = "0.3"