[package]
name = "ws_server"
version = "0.1.0"
authors = ["Morgana <xly_tk@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.11.0"
env_logger = "0.7.1"
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "0.4.17"
serde_json = "1.0"
serde = { version = "1.0.114", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
threadpool = "1.0"